team/output/BD_772_700_1404/337/1/1/op.txt
  File "/home/ubuntu/test-bigdata/adminmgr/media/code/A2/python/task/BD_772_700_1404_2_U9PyY1W.py", line 16
    yield(n, currentrank/batsman_number)
        ^
IndentationError: expected an indented block
